Fixed Sidebar - Scrollbar not working when change screen size

--- a/src/scss/_content-wrapper.scss
+++ b/src/scss/_content-wrapper.scss
@@ -1,4 +1,5 @@
 .content-wrapper {
   grid-area: #{$lte-prefix}content-wrapper;
+  max-width: 100vw;
   padding-bottom: 1rem;
 }
