--- a/src/scss/_main-footer.scss
+++ b/src/scss/_main-footer.scss
@@ -5,6 +5,7 @@
 .main-footer {
   grid-area: #{$lte-prefix}main-footer;
   width: inherit;
+  max-width: 100vw;
   padding: $lte-main-footer-padding;
   color: $lte-main-footer-color;
   background-color: $lte-main-footer-bg;
